core/roboconf-core/src/test/resources/configurations/invalid/instanceof-very-imbricated-invalid-property.instances
instance of wrapper {
	instance of vm {
		name: my-vm;
		instance of server {
			name=
		}
	}
}